// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NumberOfResultsWithSelectedItemsNumber > renders correctly with default props 1`] = `
<DocumentFragment>
  <span>
    <span
      data-testid="number-of-results"
    >
       results
    </span>
  </span>
</DocumentFragment>
`;

exports[`NumberOfResultsWithSelectedItemsNumber > renders correctly with numberOfSelected 1`] = `
<DocumentFragment>
  <span>
    5 of 
    <span
      data-testid="number-of-results"
    >
       results
    </span>
  </span>
</DocumentFragment>
`;

exports[`NumberOfResultsWithSelectedItemsNumber > renders correctly with numberOfSelected as 0 1`] = `
<DocumentFragment>
  <span>
    <span
      data-testid="number-of-results"
    >
       results
    </span>
  </span>
</DocumentFragment>
`;
